--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           paths:
             - "venv"
       - run:
-          name: Running tests
+          name: Running Tests
           command: |
             . venv/bin/activate
             python3 manage.py test
