--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 django-cors-headers==3.4.0
 django-enumfield==2.0.1
-flake8==flake8
+flake8==3.8.3
 Pillow==7.2.0
