--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ jobs:
       - run:
           name: Running Flake8
           command: |
-            python -m flake8
+            python3 -m flake8
