--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,5 @@ jobs:
       - run:
           name: Running Flake8
           command: |
+            . venv/bin/activate
             python3 -m flake8
