--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E266, E501, W503
+ignore = E266, E501, W503, W293, F403, W291, E127
 max-line-length = 100
 select = B,C,E,F,W,T4,B9
 exclude = venv
